# hex-cookiecutter-uv

./: .pre-commit-config.yaml  .pre-commit-config.yml  README.md  cookiecutter.json  pyproject.toml  requirements.txt
hooks/: post_gen_project.py
tests/: __init__.py  test_hooks.py  test_template.py
{{cookiecutter.project_slug}}/: .gitignore  PLACEHOLDER_DJANGO  PLACEHOLDER_FASTAPI  README.md  framework_selection.txt  pyproject.toml
{{cookiecutter.project_slug}}/drf_template/: DDD_APP_CREATION.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/drf_template/src/{{cookiecutter.project_slug}}/: __init__.py  manage.py  wsgi.py
{{cookiecutter.project_slug}}/drf_template/src/{{cookiecutter.project_slug}}/adapters/driven/persistence/: user_repository.py
{{cookiecutter.project_slug}}/drf_template/src/{{cookiecutter.project_slug}}/adapters/driving/api/: urls.py
{{cookiecutter.project_slug}}/drf_template/src/{{cookiecutter.project_slug}}/config/: settings.py  urls.py
{{cookiecutter.project_slug}}/drf_template/src/{{cookiecutter.project_slug}}/dependencies/: container.py
{{cookiecutter.project_slug}}/drf_template/src/{{cookiecutter.project_slug}}/domain/entities/: user.py
{{cookiecutter.project_slug}}/drf_template/src/{{cookiecutter.project_slug}}/domain/services/: user_service.py
{{cookiecutter.project_slug}}/drf_template/src/{{cookiecutter.project_slug}}/management/: apps.py
{{cookiecutter.project_slug}}/drf_template/src/{{cookiecutter.project_slug}}/management/commands/: create_ddd_app.py
{{cookiecutter.project_slug}}/fastapi_template/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/fastapi_template/src/{{cookiecutter.project_slug}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/fastapi_template/src/{{cookiecutter.project_slug}}/adapters/driven/persistence/: user_repository.py
{{cookiecutter.project_slug}}/fastapi_template/src/{{cookiecutter.project_slug}}/adapters/driving/api/: __init__.py  routes.py
{{cookiecutter.project_slug}}/fastapi_template/src/{{cookiecutter.project_slug}}/config/: settings.py
{{cookiecutter.project_slug}}/fastapi_template/src/{{cookiecutter.project_slug}}/dependencies/: container.py
