[tool.uv]
project = "{{cookiecutter.project_slug}}"
python = "3.12"

[tool.uv.dependencies]
django = "^4.3"
djangorestframework = "^3.15"
psycopg2-binary = "^2.9"
pytest = "^8.2"
pytest-django = "^4.8"
black = "^24.3"
isort = "^6.0"
mypy = "^1.5"

[tool.uv.scripts]
start = "python src/{{cookiecutter.project_slug}}/manage.py runserver 0.0.0.0:8000"
test = "pytest --maxfail=1 --disable-warnings -q"
lint = "black src/ tests/ scripts/ && isort src/ tests/ scripts/"
type-check = "mypy src/"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

