[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
requires-python = ">=3.12"
dependencies = [
    "django",
    "djangorestframework",
    "psycopg2-binary",
    "python-dotenv",
        ]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "httpx",
]

[project.scripts]
start = "{{cookiecutter.project_slug}}.manage:main"
migrate = "{{cookiecutter.project_slug}}.manage:migrate"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"