[tool.uv]
python = ">=3.12,<3.13"

[tool.uv.dependencies]
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
pydantic = "^2.3"
pydantic-settings = "^2.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.1"
pytest-asyncio = "^0.21"
httpx = "^1.2"
python-dotenv = "^1.1"

[tool.uv.scripts]
start = "python -m src.{{cookiecutter.project_slug}}.main"
dev = "uvicorn src.{{cookiecutter.project_slug}}.main:app --reload --host 0.0.0.0 --port 8000"
test = "pytest tests/"

[build-system]
requires = ["setuptools>=65", "wheel>=0.40"]
build-backend = "setuptools.build_meta"
