[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    {%- if cookiecutter.db_type == "postgresql" %}
    "psycopg2-binary>=2.9",
    {%- endif %}
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "httpx>=0.24",
]

[project.scripts]
start = "{{cookiecutter.project_slug}}.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"