[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    {%- if cookiecutter.db_type == "postgresql" %}
    "psycopg2-binary",
    {%- endif %}
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
start = "{{cookiecutter.project_slug}}.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
